# oracle

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
.codex/: agents.md  plant.manifest.json
.codex/packets/: README.md  packet_contract.template.json  packet_contract.template.md  phase3-index.md
.codex/packets/examples/: packet-000-foundation.json
.codex/packets/packet-ctrlr-00-contracts/: EXEC_PROMPT.md  contract.json
.codex/schemas/: contract.schema.json  exec_prompt.schema.json
.codex/tools/: root_preflight.py  run_packet.py  validate_exec_prompt.py  validate_plant.py
.github/ISSUE_TEMPLATE/: packet-default.yml
.github/workflows/: deprecation-gates.yml
conf.d/marimo/: env.sh
conf.d/vscode/: env.sh  python.profile-template.md
control/plant/: README.md
docs/: README.md  basic_usage.md  configuration_and_settings.md  dev_flow.md  eofl-neuroctrl.md  eofl-oracle.md  eofl-parallel.md  evidence_first_dsa_workflow.md  oracle-ctrlr.md  oracle_overview.md  overview.md  setup_and_workflow.md
docs/otel_migration/: README.md  dependency_matrix.md  tracker.md  workflow_compatibility.md
integration/tests/: test_otel_workflow_compat.py
packets/: EXECUTION_DAG.md  EXEC_PROMPT.template.md  README.md
packets/examples/: packet-000-foundation.EXEC_PROMPT.md
schemas/: plant.schema.json
scripts/: install_vscode_extensions.sh  marimo_deterministic.sh  mvp_bootstrap.sh  mvp_tests.sh  vscode_deterministic.sh
skills/packet-runner/: SKILL.md
skills/packet-template/: SKILL.md  skill.json
spec/: README.md  schema.md  schema_contract.json
src/ctrlr/: __init__.py  budget.py  control.py  mermaid.py  seeded.py  trace.py
src/oracle/: __init__.py  otel_runtime.py
tests/: test_budget.py  test_control.py  test_mermaid_calltree.py  test_mermaid_flow.py  test_seeded.py  test_trace.py
tests/integration/: test_deprecation_enforcement.py  test_imports.py  test_oracle_otel_adapters.py  test_oracle_otel_runtime.py  test_otel_schema_contract.py  test_otel_workflow_compat.py
tools/: migrate_flat_packets.py
(+45 files in other folders)
