[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oracle"
version = "0.1.0"
description = "Gatekeeper repo for oracle_api, oracle_tools, and course content"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
  "packages/oracle",
  "packages/oracle_api",
  "packages/oracle_tools",
]
